# imu_AHRS

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py  test_pythonmodule.py
conda.recipe/: meta.yaml
src/: AHRS.hpp  MadgwickAHRS.h  MadgwickAHRS.hpp  MahonyAHRS.cpp  MahonyAHRS.hpp  imu_trajectory.cpp  imu_trajectory_pybind.cpp  imu_trajectory_utils.cpp  imu_trajectory_utils.hpp
tests/: test_basic.py
visualizer/: cube_visualiser.py  trajectory_compute.py
